# text2sql

./: .gitignore  LICENSE  compose.yaml
all_streamlit/: .env.example  Dockerfile  auth.py  chroma.sqlite3  compose.yaml  navigation.py  pyproject.toml  utils.py
all_streamlit/app/: config.py
all_streamlit/app/pages/: auth.py
all_streamlit/app/utils/: data_prep.py  navigation.py  opensearch_tools.py
all_streamlit/app/vanna_setup/: vanna_calls.py  vector_store.py
all_streamlit/helm/text2sql/: Chart.yaml  values.yaml
all_streamlit/helm/text2sql/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
all_streamlit/pages/: chat.py  vanna_calls.py
all_streamlit/src/all_streamlit/: data_prep.py  main.py  navigation.py  opensearch_tools.py
all_streamlit/src/all_streamlit/pages/: auth.py  chat.py
all_streamlit/src/all_streamlit/utils/: data_prep.py
all_streamlit/src/all_streamlit/vanna_setup/: opensearch.py  vanna_calls.py  vector_store.py
all_streamlit/text2sql/backend/: aws_utils.py  config.py  data_prep.py  embedding_handler.py  pre_start.py
all_streamlit/text2sql/backend/connectors/: clients.py  my_openai.py  my_snowflake.py  opensearch.py  postgres.py
all_streamlit/text2sql/backend/core/: chart_handler.py  query_handler.py  retrieval.py
all_streamlit/text2sql/backend/db/: init.sql
all_streamlit/text2sql/backend/utils/: opensearch_tools.py  (+1 more)
all_streamlit/text2sql/pages/: auth.py  chat.py
all_streamlit/vanna_setup/: data_prep.py  opensearch.py  vanna_calls.py  vector_stores.py
(+23 files in other folders)
