[project]
name = "all-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.36",
    "streamlit>=1.41.1",
    "vanna[chromadb,ollama,postgres]>=0.4.3",
]

[tool.uv]
constraint-dependencies = ["kaleido!=0.2.1.post1"]