[project]
name = "all-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0,<0.28.0",
    "opensearch-py>=2.8.0",
    "psycopg2-binary>=2.9.10",
    "sentence-transformers>=3.3.1",
    "sqlalchemy>=2.0.36",
    "streamlit>=1.41.1",
    "vanna[chromadb,ollama,postgres]>=0.7.5",
]

[project.scripts]
all-streamlit = "all_streamlit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]